--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body{
       margin:0;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: "color:var(--bg)";
+      background:var(--bg);
       color:var(--white);
       line-height:1.45;
     }
@@ -85,7 +85,7 @@
         <article class="proj">
           <h3 style="color:var(--accent-2)">Packet Sniffer (C)</h3>
           <div class="tag">Systems</div>
-          <p style="color:var(--muted)">A pcap-based packet analyzer 
+          <p style="color:var(--white)">A pcap-based packet analyzer 
             for network traffic inspection and protocol parsing.
           </p>
         </article>
@@ -99,7 +99,7 @@
         <article class="proj">
           <h3 style="color:var(--accent-2)">rcopy (UDP)</h3>
           <div class="tag">Networks</div>
-          <p style="color:var(--muted)">Reliable file transfer 
+          <p style="color:var(--white)">Reliable file transfer 
             using selective-reject ARQ and sliding window buffering.
           </p>
         </article>
