--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     body{
       margin:0;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg,var(--bg) 0%, #0b0b0b 100%);
+      background: #0b0b0b;
       color:var(--white);
       line-height:1.6;
     }
@@ -36,7 +36,7 @@
     .menu a{color:var(--white); text-decoration:none; font-weight:600; font-size:15px; padding:8px 10px; border-radius:8px}
     .menu a.active, .menu a:hover{color:var(--accent); background:rgba(255,255,255,0.05)}
     .social-nav{display:flex; gap:12px;}
-    .social-nav img{width:24px; height:24px; filter:invert(1); cursor:pointer;}
+    .social-nav img{width:24px; height:24px; cursor:pointer;}
     main{max-width:var(--maxw); margin:120px auto 60px; padding:24px; display:flex; flex-direction:column; gap:40px;}
     h1#name{font-size:72px; color:var(--accent); text-align:center; margin-bottom:16px;}
     .card{background:var(--panel); padding:28px; border-radius:var(--radius); border-left:4px solid var(--accent);}
