--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .menu a{color:var(--white); text-decoration:none; font-weight:600; font-size:15px; padding:8px 10px; border-radius:8px}
     .menu a.active, .menu a:hover{color:var(--accent); background:rgba(255,255,255,0.05)}
     .social-nav{display:flex; gap:12px;}
-    .social-nav img{width:24px; height:24px; cursor:pointer;}
+    .social-nav img{width:24px; height:24px; color:"white"; cursor:pointer;}
     main{max-width:var(--maxw); margin:120px auto 60px; padding:24px; display:flex; flex-direction:column; gap:40px;}
     h1#name{font-size:72px; color:var(--accent); text-align:center; margin-bottom:16px;}
     .card{background:var(--panel); padding:28px; border-radius:var(--radius); border-left:4px solid var(--accent);}
@@ -90,11 +90,6 @@
           <p style="color:var(--white)">Reliable file transfer using selective-reject ARQ and sliding window buffering.</p>
         </article>
       </div>
-    </section>
-
-    <section class="card" id="contact-section">
-      <h2 style="color:var(--accent); margin-top:0">Contact</h2>
-      <p style="color:var(--white)">Reach out via LinkedIn or email.</p>
     </section>
   </main>
 
