--- a/index.html
+++ b/index.html
@@ -1,133 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dane Dathrego</title>
-  <meta name="description" content="Dane Dathrego — projects, about, contact." />
-  <style>
-    :root{
-      --bg: #0f1111;
-      --panel: #161718;
-      --muted: #e0e0e0;
-      --accent: #7aa893;
-      --accent-2: #93a7b5;
-      --white: #f5f5f4;
-      --maxw: 980px;
-      --radius: 12px;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: #0b0b0b;
-      color:var(--white);
-      line-height:1.6;
-    }
-    nav{
-      position:fixed; inset:0 0 auto 0; height:72px; display:flex; align-items:center; justify-content:space-between;
-      background: rgba(10,12,10,0.4); backdrop-filter: blur(6px);
-      border-bottom:1px solid rgba(255,255,255,0.05);
-      z-index:40;
-      padding:0 24px;
-    }
-    .menu{display:flex; gap:18px}
-    .menu a{color:var(--white); text-decoration:none; font-weight:600; font-size:15px; padding:8px 10px; border-radius:8px}
-    .menu a.active, .menu a:hover{color:var(--accent); background:rgba(255,255,255,0.05)}
-    .social-nav{display:flex; gap:12px;}
-    .social-nav img{width:24px; height:24px; color:"white"; cursor:pointer;}
-    main{max-width:var(--maxw); margin:120px auto 60px; padding:24px; display:flex; flex-direction:column; gap:40px;}
-    h1#name{font-size:72px; color:var(--accent); text-align:center; margin-bottom:16px;}
-    .card{background:var(--panel); padding:28px; border-radius:var(--radius); border-left:4px solid var(--accent);}
-    .projects-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:16px;}
-    .proj{padding:16px; border-radius:var(--radius); background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02)); border:1px solid rgba(255,255,255,0.05)}
-    .tag{display:inline-block; font-size:12px; padding:4px 8px; border-radius:999px; background:rgba(122,168,147,0.15); color:var(--accent); font-weight:700}
-    footer{max-width:var(--maxw); margin:40px auto 60px; padding:20px; color:var(--muted); display:flex; justify-content:space-between; gap:16px; align-items:center}
-    .social a{color:var(--accent-2); text-decoration:none; margin-left:12px}
-  </style>
-</head>
-<body>
-  <nav aria-label="Primary">
-    <div class="menu" role="navigation">
-      <a href="/" data-link>Home</a>
-      <a href="/about" data-link>About</a>
-      <a href="/projects" data-link>Projects</a>
-    </div>
-    <div class="social-nav">
-      <a href="https://www.linkedin.com/in/danedathrego" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"/></a>
-      <a href="mailto:d.a.dathrego@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"/></a>
-    </div>
-  </nav>
-
-  <main id="app">
-    <section id="home">
-      <p style="color:var(--white); font-size:20px; text-align:center; max-width:70ch; margin:0 auto;">
-        Hi, my name is
-      </p>
-      <h1 id="name">Dane Dathrego</h1>
-      
-    </section>
-
-    <section class="card" id="about-section">
-      <h2 style="color:var(--accent); margin-top:0">About Me</h2>
-      <p style="color:var(--white); font-size:16px">
-        I'm a computer engineering student at Cal Poly SLO graduating 
-        in Spring 2026 with a strong interest in embedded systems, networking,
-        and low-level software. I enjoy working close to the hardware and 
-        understanding how systems communicate — from microcontrollers to 
-        application-level protocols. My projects sit at the intersection of 
-        hardware, software, and clean interface design, where I focus on 
-        building reliable, efficient, and intuitive systems.
-      </p>
-      <p>
-        I'm motivated 
-        by solving real technical problems, learning new tools quickly, 
-        and designing systems that feel cohesive from the bottom up. 
-        I'm always looking for opportunities to grow, collaborate, and 
-        work on technology that bridges the gap between deep technical 
-        implementation and thoughtful user experience.
-      </p>
-    </section>
-
-    <section class="card" id="projects-section">
-      <h2 style="color:var(--accent); margin-top:0">Projects</h2>
-      <div class="projects-grid" style="margin-top:12px">
-        <article class="proj">
-          <h3 style="color:var(--accent-2)">Poly1rover Port II</h3>
-          <div class="tag">Embedded Systems</div>
-          <p style="color:var(--white)">Porting a Mars rover system to 
-            a Xilinx Zynq-7020 ROACH platform while implementing SPI-based Wi-Fi, 
-            optimizing the OS for eMMC constraints, integrating an I²C sensor bus,
-             and validating motor control, robotic arm, and vision systems with 
-             software-driven power management and autonomous demo mode.
-          </p>
-        </article>
-        <article class="proj">
-          <h3 style="color:var(--accent-2)">What's For Dinner?</h3>
-          <div class="tag">WebDev</div>
-          <p style="color:var(--white)">Designed and developed a full-stack web application 
-            using Agile practices, contributing to requirements gathering, UI/UX design, 
-            and sprint execution while implementing features with React, Node.js/Express, 
-            MongoDB, and Jest to support deployment and continuous improvement.
-          </p>
-        </article>
-        <article class="proj">
-          <h3 style="color:var(--accent-2)">Rcopy</h3>
-          <div class="tag">Networks</div>
-          <p style="color:var(--white)">Reliable UDP file transfer using selective-reject ARQ and sliding window buffering.</p>
-        </article>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div>© 2025 Dane Dathrego</div>
-    <div style="text-align:right">
-      <a href="https://www.linkedin.com/in/danedathrego" target="_blank" rel="noopener">LinkedIn</a>
-      &nbsp;•&nbsp;
-      <a href="mailto:d.a.dathrego@gmail.com">Email</a>
-    </div>
-  </footer>
-</body>
+  <head>
+    <title>Dane Dathrego</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Dane Dathrego</h1>
+    <p><img src="InBug-Black.png" alt="LinkedIn Logo">LinkedIn  Email  Github  Resume</p>
+  </body>
 </html>
