--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Dane Dathrego</h1>
-    <p><img src="InBug-Black.png" alt="LinkedIn Logo">LinkedIn  Email  Github  Resume</p>
+    <p>LinkedIn  Email  Github  Resume</p>
   </body>
 </html>
