--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Dane Dathrego</h1>
-    <p>LinkedIn  Email  Github  Resume</p>
+    <div class="title-container">
+      <h1>Dane Dathrego</h1>
+      <h2 class="link-item">
+        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>
+      </h2>
+      <h2 class="link-item"></h2>
+        <a href="mailto:d.a.dathrego@gmail.com" target="_blank">Email</a>
+      </h2>
+      <h2 class="link-item"></h2>
+        <a href="https://github.com/ddathreg" target="_blank">Github</a>
+      </h2>
+      <h2 class="link-item"></h2>
+        <a href="DathregoDaneResume.pdf" target="_blank">Resume</a>
+      </h2>
+    </div>
   </body>
 </html>
