--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <h2 class="link-item">
         <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>
       </h2>
-      <h2 class="link-item"></h2>
+      <h2 class="link-item">
         <a href="mailto:d.a.dathrego@gmail.com" target="_blank">Email</a>
       </h2>
-      <h2 class="link-item"></h2>
+      <h2 class="link-item">
         <a href="https://github.com/ddathreg" target="_blank">Github</a>
       </h2>
-      <h2 class="link-item"></h2>
+      <h2 class="link-item">
         <a href="DathregoDaneResume.pdf" target="_blank">Resume</a>
       </h2>
     </div>
