--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <title>Dane Dathrego</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Personal Website for Dane Dathrego that 
+      contains links and information about Dane Dathrego">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <div class="title-container">
-      <h1>Dane Dathrego</h1>
-      <h2 class="link-item">
-        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>
-      </h2>
-      <h2 class="link-item">
-        <a href="mailto:d.a.dathrego@gmail.com" target="_blank">Email</a>
-      </h2>
-      <h2 class="link-item">
-        <a href="https://github.com/ddathreg" target="_blank">Github</a>
-      </h2>
-      <h2 class="link-item">
-        <a href="DathregoDaneResume.pdf" target="_blank">Resume</a>
-      </h2>
-    </div>
+    <section>
+      <div class="title-container">
+        <h1>Dane Dathrego</h1>
+        <h2 class="link-item">
+          <a href="https://www.linkedin.com/in/danedathrego" target="_blank"><img src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
+        </h2>
+        <h2 class="link-item">
+          <a href="DathregoDaneResume.pdf" target="_blank"><img src="/svg/doc-svgrepo-com.svg">Resume</a>
+        </h2>
+        <h2 class="link-item">
+          <a href="mailto:d.a.dathrego@gmail.com" target="_blank"><img src="/svg/email-svgrepo-com.svg">Email</a>
+        </h2>
+        <h2 class="link-item">
+          <a href="https://github.com/ddathreg" target="_blank"><img src="/svg/github-142-svgrepo-com.svg">Github</a>
+        </h2>
+      </div>
+    </section>
   </body>
 </html>
