--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
       <div class="title-container">
         <h1>Dane Dathrego</h1>
         <h2 class="link-item">
-          <a href="https://www.linkedin.com/in/danedathrego" target="_blank"><img src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
+            <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
         </h2>
         <h2 class="link-item">
-          <a href="DathregoDaneResume.pdf" target="_blank"><img src="/svg/doc-svgrepo-com.svg">Resume</a>
+          <a href="DathregoDaneResume.pdf" target="_blank">
+            <img width="24" height="24" src="/svg/doc-svgrepo-com.svg">Resume</a>
         </h2>
         <h2 class="link-item">
-          <a href="mailto:d.a.dathrego@gmail.com" target="_blank"><img src="/svg/email-svgrepo-com.svg">Email</a>
+          <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
+            <img width="24" height="24" src="/svg/email-svgrepo-com.svg">Email</a>
         </h2>
         <h2 class="link-item">
-          <a href="https://github.com/ddathreg" target="_blank"><img src="/svg/github-142-svgrepo-com.svg">Github</a>
+          <a href="https://github.com/ddathreg" target="_blank">
+            <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg">Github</a>
         </h2>
       </div>
     </section>
