--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
     <section>
       <div class="title-container">
         <h1>Dane Dathrego</h1>
-        <h2 class="link-item">
-          <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
-            <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
-        </h2>
-        <h2 class="link-item">
-          <a href="DathregoDaneResume.pdf" target="_blank">
-            <img width="24" height="24" src="/svg/doc-svgrepo-com.svg">Resume</a>
-        </h2>
-        <h2 class="link-item">
-          <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
-            <img width="24" height="24" src="/svg/email-svgrepo-com.svg">Email</a>
-        </h2>
-        <h2 class="link-item">
-          <a href="https://github.com/ddathreg" target="_blank">
-            <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg">Github</a>
-        </h2>
+        <div class="link-row">
+          <div class="link-col">
+            <h2 class="link-item">
+              <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
+                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
+            </h2>
+          </div>
+          <div class="link-col">
+            <h2 class="link-item">
+              <a href="DathregoDaneResume.pdf" target="_blank">
+                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg">Resume</a>
+            </h2>
+          </div>
+          <div class="link-col">
+            <h2 class="link-item">
+              <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
+                <img width="24" height="24" src="/svg/email-svgrepo-com.svg">Email</a>
+            </h2>
+          </div>
+          <div class="link-col">
+            <h2 class="link-item">
+              <a href="https://github.com/ddathreg" target="_blank">
+                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg">Github</a>
+            </h2>
+          </div>
+        </div>
       </div>
     </section>
   </body>
