--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <section>
+    <main>
       <div class="title-container">
         <h1>Dane Dathrego</h1>
         <div class="link-row">
           <div class="link-col">
-            <h2 class="link-item">
+            <section class="link-item">
               <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
                 <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg">LinkedIn</a>
-            </h2>
+            </section>
           </div>
           <div class="link-col">
-            <h2 class="link-item">
+            <section class="link-item">
               <a href="DathregoDaneResume.pdf" target="_blank">
                 <img width="24" height="24" src="/svg/doc-svgrepo-com.svg">Resume</a>
-            </h2>
+              </section>
           </div>
           <div class="link-col">
-            <h2 class="link-item">
+            <section class="link-item">
               <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
                 <img width="24" height="24" src="/svg/email-svgrepo-com.svg">Email</a>
-            </h2>
+            </section>
           </div>
           <div class="link-col">
-            <h2 class="link-item">
+            <section class="link-item">
               <a href="https://github.com/ddathreg" target="_blank">
                 <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg">Github</a>
-            </h2>
+            </section>
           </div>
         </div>
       </div>
-    </section>
+    </main>
   </body>
 </html>
