--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
           <div class="link-col">
             <section class="link-item">
               <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
-                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg"/>LinkedIn</a>
+                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg"/></a>
             </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="DathregoDaneResume.pdf" target="_blank">
-                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg"/>Resume</a>
+                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg"/></a>
               </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
-                <img width="24" height="24" src="/svg/email-svgrepo-com.svg"/>Email</a>
+                <img width="24" height="24" src="/svg/email-svgrepo-com.svg"/></a>
             </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="https://github.com/ddathreg" target="_blank">
-                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg"/>Github</a>
+                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg"/></a>
             </section>
           </div>
         </div>
