--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <div class="title-container">
-        <image class="cropped-image" src="dane.JPG" alt="Dane at the Grand Canyon"></image>
+        <img class="cropped-image" src="dane.JPG" alt="Dane at the Grand Canyon"/>
         <h1>Dane Dathrego</h1>
         <div class="link-row">
           <div class="link-col">
