--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
           <div class="link-col">
             <section class="link-item">
               <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
-                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg"/></a>
+                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg" alt="LinkedIn"/></a>
             </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="DathregoDaneResume.pdf" target="_blank">
-                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg"/></a>
+                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg" alt="Resume"/></a>
               </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
-                <img width="24" height="24" src="/svg/email-svgrepo-com.svg"/></a>
+                <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/></a>
             </section>
           </div>
           <div class="link-col">
             <section class="link-item">
               <a href="https://github.com/ddathreg" target="_blank">
-                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg"/></a>
+                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg" alt="GitHub"/></a>
             </section>
           </div>
         </div>
