--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="link-col">
             <section class="link-item">
               <a href="https://github.com/ddathreg" target="_blank">
-                <img width="24" height="24" src="/svg/github-142-svgrepo-com.svg" alt="GitHub"/></a>
+                <img width="24" height="24" src="/svg/icons8-github.svg" alt="GitHub"/></a>
             </section>
           </div>
         </div>
