--- a/index.html
+++ b/index.html
@@ -17,30 +17,34 @@
         <img class="cropped-image" src="dane.JPG" alt="Dane at the Grand Canyon"/>
         <h1>Dane Dathrego</h1>
         <div class="link-row">
+          <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
           <div class="link-col">
             <section class="link-item">
-              <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
-                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg" alt="LinkedIn"/></a>
+                <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg" alt="LinkedIn"/>
             </section>
           </div>
+          </a>
+          <a href="DathregoDaneResume.pdf" target="_blank">
           <div class="link-col">
-            <section class="link-item">
-              <a href="DathregoDaneResume.pdf" target="_blank">
-                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg" alt="Resume"/></a>
-              </section>
+            <div class="link-item">
+                <img width="24" height="24" src="/svg/doc-svgrepo-com.svg" alt="Resume"/>
+              </div>
           </div>
+          </a>
+          <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
           <div class="link-col">
-            <section class="link-item">
-              <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
-                <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/></a>
-            </section>
+            <div class="link-item">
+                <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/>
+            </div>
           </div>
+          </a>
+          <a href="https://github.com/ddathreg" target="_blank">
           <div class="link-col">
-            <section class="link-item">
-              <a href="https://github.com/ddathreg" target="_blank">
-                <img width="24" height="24" src="/svg/icons8-github.svg" alt="GitHub"/></a>
-            </section>
+            <div class="link-item">
+                <img width="24" height="24" src="/svg/icons8-github.svg" alt="GitHub"/>
+            </div>
           </div>
+          </a>
         </div>
       </div>
     </main>
