--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <div class="title-container">
-        <img class="cropped-image" src="dane.JPG" alt="Dane at the Grand Canyon"/>
+        <img class="cropped-image" src="dane.jpeg" alt="Dane at the Grand Canyon"/>
         <h1>Dane Dathrego</h1>
         <div class="link-row">
           <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
