--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <ul class="navbar">
-      <li class="navbar-item"><a href="/">Home</a></li>
-      <li class="navbar-item"><a href="/about">About</a></li>
+      <li class="navbar-item"><a data-link href="/">Home</a></li>
+      <li class="navbar-item"><a data-link href="/about">About</a></li>
     </ul>
     <main id="app" class="page-container"></main>
     <script src="router.js"></script>
