--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div class="title-container">
-  <img class="cropped-image" src="~/images/dane.jpeg" alt="Dane at the Grand Canyon"/>
+  <img class="cropped-image" src="/images/dane.jpeg" alt="Dane at the Grand Canyon"/>
   <h1>Dane Dathrego</h1>
   <div class="link-row">
     <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
