--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <li class="navbar-item"><a data-link href="/about">About</a></li>
     </ul>
     <main id="app" class="page-container"></main>
-    <script src="router.js"></script>
+    <script src="/js/router.js"></script>
   </body>
 </html>
