--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,7 @@
         </div>
       </div>
     </a>
-    <a href="mailto:d.a.dathrego@gmail.com" target="_blank">
+    <a data-link href="/contact">
       <div class="link-col">
         <div class="link-item">
           <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/>
