--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul class="navbar">
       <li class="navbar-item"><a data-link href="/">Home</a></li>
       <li class="navbar-item"><a data-link href="/about">About</a></li>
+      <li class="navbar-item"><a data-link href="/contact">Contact</a></li>
     </ul>
     <main id="app" class="page-container"></main>
     <script src="/js/router.js"></script>
