--- a/pages/404.html
+++ b/pages/404.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
   <script>
+    // Save the original path
     sessionStorage.redirect = location.pathname;
     location.replace("/");
   </script>
 </head>
+<body></body>
 </html>
