--- a/404.html
+++ b/404.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecting...</title>
+  <style>
+    /* Match your SPA background & text color */
+    body {
+      background-color: rgb(8, 25, 11);
+      color: rgb(230, 255, 230);
+      margin: 0;
+      font-family: "BBH Bartle", "Montserrat", Helvetica, sans-serif;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
   <script>
     // Save the original path
     sessionStorage.redirect = location.pathname;
