--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,9 +1,9 @@
 <div class="contact-container">
   <form id="form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
     <input type="hidden" name="access_key" value="39154ac2-f6bb-4c70-9c11-db7e4c5e6743">
-    <input type="text" name="name" required>
-    <input type="email" name="email" required>
-    <textarea name="message" required></textarea>
+    <input type="text" name="name" placeholder="Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <textarea name="message" placeholder="Message" required></textarea>
     <button type="submit">Submit</button>
   </form>
 </div>
