--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,10 +1,13 @@
 <div class="contact-container">
+  <h1 id="contact-me">Contact Me
   <form id="form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-    <input type="hidden" name="access_key" value="39154ac2-f6bb-4c70-9c11-db7e4c5e6743">
-    <input type="text" name="name" placeholder="Name" required>
-    <input type="email" name="email" placeholder="Email" required>
+    <div class="input-container">
+      <input type="hidden" name="access_key" value="39154ac2-f6bb-4c70-9c11-db7e4c5e6743">
+      <input type="text" name="name" placeholder="Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+    </div>
     <textarea name="message" placeholder="Message" required></textarea>
     <button type="submit">Submit</button>
   </form>
 </div>
-<script src="/js/form.js"></script>
+  <script src="/js/form.js"></script>
