--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <div class="contact-container">
-  <h1 id="contact-me">Contact Me
+  <h1 id="contact-me">Contact Me</h1>
   <form id="form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
     <div class="input-container">
       <input type="hidden" name="access_key" value="39154ac2-f6bb-4c70-9c11-db7e4c5e6743">
