--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 <div class="contact-container">
   <h1 id="contact-me">Contact Me</h1>
-  <form id="form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+  <form id="form" class="contact-form">
     <div class="input-container">
       <input type="hidden" name="access_key" value="39154ac2-f6bb-4c70-9c11-db7e4c5e6743">
       <input type="text" name="name" placeholder="Name" required>
@@ -10,4 +10,4 @@
     <button type="submit">Submit</button>
   </form>
 </div>
-  <script src="/js/form.js"></script>
+<script src="/js/form.js"></script>
