--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,5 +9,5 @@
     <textarea name="message" placeholder="Message" required></textarea>
     <button type="submit">Submit</button>
   </form>
-  <script src="/js/form.js"></script>
+  <script src="/js/form.js" defer></script>
 </div>
