--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       <li class="navbar-item"><a data-link href="/contact">Contact</a></li>
     </ul>
     <main id="app" class="page-container"></main>
-    <script src="/js/router.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
