--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Dane Dathrego</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="Personal Website for Dane Dathrego that 
-      contains links and information.">
+    <meta name="description" content="Dane Dathrego | Cal Poly CPE Major">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
