--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,12 @@
 <div class="title-container">
     <h1>About Me</h1>
-    <p>...</p>
+    <p>I’m a Computer Engineering student at Cal Poly SLO graduating in Spring 2026, 
+        with experience across AI research, embedded systems, full-stack development, 
+        and robotics. I’ve contributed to AI model development at e2f, built web 
+        applications using modern frameworks, and am currently developing an 
+        autonomous rover system for my senior Capstone project. 
+        I enjoy solving complex problems, working across hardware and software, 
+        and collaborating in fast-moving technical environments. 
+        I’m especially interested in embedded systems, robotics, 
+        and intelligent software platforms.</p>
 </div>
