--- a/pages/about.html
+++ b/pages/about.html
@@ -1,12 +1,17 @@
 <div class="title-container">
     <h1>About Me</h1>
-    <p>I’m a Computer Engineering student at Cal Poly SLO graduating in Spring 2026, 
-        with experience across AI research, embedded systems, full-stack development, 
-        and robotics. I’ve contributed to AI model development at e2f, built web 
-        applications using modern frameworks, and am currently developing an 
-        autonomous rover system for my senior Capstone project. 
-        I enjoy solving complex problems, working across hardware and software, 
-        and collaborating in fast-moving technical environments. 
-        I’m especially interested in embedded systems, robotics, 
-        and intelligent software platforms.</p>
+    <div class="about-container">
+        <p>I’m a Computer Engineering student at Cal Poly San Luis Obispo graduating in Spring 2026, with experience across AI research, embedded systems, full-stack development, and robotics. I've contributed to AI model development at e2f, built web applications using modern frameworks, and am currently developing an autonomous rover system as part of my senior Capstone project. I'm especially interested in embedded systems, robotics, and intelligent software platforms, and I enjoy working at the intersection of hardware and software to solve complex problems. 
+        </p>
+        <p>
+          I grew up in Ventura, California, and from an early age I knew I wanted to work with computers. I built my first PC when I was 12, and since then I've built and worked on many others, which sparked a curiosity not just about how computers work, but how software and hardware interact at a deeper level. My first formal exposure to coding came through a Cal Poly summer engineering program in 2021, and I continued developing those skills through AP Computer Science during my senior year of high school.
+        </p>
+        <p>
+          That next year, I continued my journey at Cal Poly SLO, where I was able to explore the full breadth of computer engineering. My coursework has ranged from electrical circuitry and embedded software to website development and systems-level programming, giving me a well-rounded technical foundation. I've enjoyed the hands-on, learn-by-doing approach at Cal Poly, which has pushed me to apply theory directly to real engineering problems.
+        </p>  
+        <p>
+          Alongside my engineering studies, I've pursued a minor in History and stayed involved in sports through intramurals. Both have been a good counterbalance to technical coursework and have reinforced skills I use constantly in engineering, like communication, collaboration, and managing time across multiple commitments.
+        </p> 
+    </div>
+    
 </div>
