--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <div class="title-container">
-    <h1>About Me</h1>
+    <h1 id="about-title">About Me</h1>
     <div class="about-container">
         <p>I’m a Computer Engineering student at Cal Poly San Luis Obispo graduating in Spring 2026, with experience across AI research, embedded systems, full-stack development, and robotics. I've contributed to AI model development at e2f, built web applications using modern frameworks, and am currently developing an autonomous rover system as part of my senior Capstone project. I'm especially interested in embedded systems, robotics, and intelligent software platforms, and I enjoy working at the intersection of hardware and software to solve complex problems. 
         </p>
