--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,4 @@
-<div class="title-container">
+<div class="about-container">
     <h1 id="about-title">About Me</h1>
     <div class="about-container">
         <p>I’m a Computer Engineering student at Cal Poly San Luis Obispo graduating in Spring 2026, with experience across AI research, embedded systems, full-stack development, and robotics. I've contributed to AI model development at e2f, built web applications using modern frameworks, and am currently developing an autonomous rover system as part of my senior Capstone project. I'm especially interested in embedded systems, robotics, and intelligent software platforms, and I enjoy working at the intersection of hardware and software to solve complex problems. 
@@ -13,5 +13,4 @@
           Alongside my engineering studies, I've pursued a minor in History and stayed involved in sports through intramurals. Both have been a good counterbalance to technical coursework and have reinforced skills I use constantly in engineering, like communication, collaboration, and managing time across multiple commitments.
         </p> 
     </div>
-    
 </div>
