--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <div class="about-container">
     <h1 id="about-title">About Me</h1>
-    <div class="about-container">
-        <p>I’m a Computer Engineering student at Cal Poly San Luis Obispo graduating in Spring 2026, with experience across AI research, embedded systems, full-stack development, and robotics. I've contributed to AI model development at e2f, built web applications using modern frameworks, and am currently developing an autonomous rover system as part of my senior Capstone project. I'm especially interested in embedded systems, robotics, and intelligent software platforms, and I enjoy working at the intersection of hardware and software to solve complex problems. 
+    <div class="about-text">
+        <p>I'm a Computer Engineering student at Cal Poly San Luis Obispo graduating in Spring 2026, with experience across AI research, embedded systems, full-stack development, and robotics. I've contributed to AI model development at e2f, built web applications using modern frameworks, and am currently developing an autonomous rover system as part of my senior Capstone project. I'm especially interested in embedded systems, robotics, and intelligent software platforms, and I enjoy working at the intersection of hardware and software to solve complex problems. 
         </p>
         <p>
           I grew up in Ventura, California, and from an early age I knew I wanted to work with computers. I built my first PC when I was 12, and since then I've built and worked on many others, which sparked a curiosity not just about how computers work, but how software and hardware interact at a deeper level. My first formal exposure to coding came through a Cal Poly summer engineering program in 2021, and I continued developing those skills through AP Computer Science during my senior year of high school.
