--- a/pages/home.html
+++ b/pages/home.html
@@ -1,34 +1,36 @@
 <div class="title-container">
-  <img class="cropped-image" src="/images/dane.jpeg" alt="Dane at the Grand Canyon"/>
-  <h1>Dane Dathrego</h1>
-  <div class="link-row">
-    <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
-      <div class="link-col">
-        <div class="link-item">
-          <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg" alt="LinkedIn"/>
+  <div class="home-main">
+    <img class="cropped-image" src="/images/dane.jpeg" alt="Dane at the Grand Canyon"/>
+    <h1>Dane Dathrego</h1>
+    <div class="link-row">
+      <a href="https://www.linkedin.com/in/danedathrego" target="_blank">
+        <div class="link-col">
+          <div class="link-item">
+            <img width="24" height="24" src="/svg/linkedin-svgrepo-com.svg" alt="LinkedIn"/>
+          </div>
         </div>
-      </div>
-    </a>
-    <a href="DathregoDaneResume.pdf" target="_blank">
-      <div class="link-col">
-        <div class="link-item">
-          <img width="24" height="24" src="/svg/doc-svgrepo-com.svg" alt="Resume"/>
+      </a>
+      <a href="DathregoDaneResume.pdf" target="_blank">
+        <div class="link-col">
+          <div class="link-item">
+            <img width="24" height="24" src="/svg/doc-svgrepo-com.svg" alt="Resume"/>
+          </div>
         </div>
-      </div>
-    </a>
-    <a data-link href="/contact">
-      <div class="link-col">
-        <div class="link-item">
-          <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/>
+      </a>
+      <a data-link href="/contact">
+        <div class="link-col">
+          <div class="link-item">
+            <img width="24" height="24" src="/svg/email-svgrepo-com.svg" alt="Email"/>
+          </div>
         </div>
-      </div>
-    </a>
-    <a href="https://github.com/ddathreg" target="_blank">
-      <div class="link-col">
-        <div class="link-item">
-          <img width="24" height="24" src="/svg/icons8-github.svg" alt="GitHub"/>
+      </a>
+      <a href="https://github.com/ddathreg" target="_blank">
+        <div class="link-col">
+          <div class="link-item">
+            <img width="24" height="24" src="/svg/icons8-github.svg" alt="GitHub"/>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
   </div>
 </div>
